011 ==> 375142 - The similarity calculated for the fuzzy image drop search is imprecise.
012 ==> 336253 - Create a New tag, Unconfirmed Faces [patch].
013 ==> 263400 - Newly detected faces should be stored in a dedicated virtual album for checking.
014 ==> 262168 - When adding name, the list should only contain people [patch].
015 ==> 373946 - digiKam freezes when trying to use "Upload".
016 ==> 367083 - Not Writing Labels to XMP Sidecar.
017 ==> 375108 - AppImage has no application icon showing in Ubuntu.
018 ==> 341758 - BQM Watermark tool : Option to set size based on given dimension.
019 ==> 371485 - GoogleMaps outdated.
020 ==> 375399 - No preview of video files.
021 ==> 375357 - No video preview.
022 ==> 375390 - "Set as Tag Thumbnail" in Tag View doesn't work.
023 ==> 375110 - Open with doesn't remember application association.
024 ==> 328457 - BQM Watermark tool : doesn't apply zero margins.
025 ==> 373756 - Display Names Are Not Updated in Regions When People Tag Changed.
026 ==> 374712 - Preview image does not work any more from thumbs view.
027 ==> 281742 - ICONVIEW : wrong selection start when browsing images.
028 ==> 375408 - Don't change context menu shortcut keys in single vs. multiple image context menus.
029 ==> 375471 - Delete Selected Albums Dialogue Contains Duplicate Paths.
030 ==> 339460 - BQM Watermark tool : add new option to support font style [patch].
031 ==> 375600 - Time Adjust Batch Queue depends on Global Metadata Setting for timestamp.
032 ==> 375627 - What is the input box under Fuzzy -> Image -> Similarity range?
033 ==> 375663 - Progress bars not initialized in ImageEditor at various places.
034 ==> 375350 - Default maintenance window too small on OSX.
035 ==> 374004 - Different Images recognised as identical images.
036 ==> 375704 - Dragging the map over the zoom slider in Marble/OSM view will unintentionally zoom out/in.
037 ==> 375749 - Crash when trying to configure table column.
038 ==> 