@@ -47,4 +47,5 @@ BUGFIXES FROM BUGZILLA:
 035 ==> 374004 - Different Images recognised as identical images.
 036 ==> 375704 - Dragging the map over the zoom slider in Marble/OSM view will unintentionally zoom out/in.
 037 ==> 375749 - Crash when trying to configure table column.
-038 ==> 
+038 ==> 363937 - Add option to disable thumbnails in Import window.
+039 ==> 
